--- a/packages/client/src/style/critical.css
+++ b/packages/client/src/style/critical.css
@@ -1,4 +1,14 @@
+html,
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
+}
+
 body {
+  background-color: #000;
   margin: 0;
   font-family: sans-serif;
   -webkit-font-smoothing: antialiased;
